@@ -128,9 +128,9 @@ class SMWURIValue extends SMWDataValue {
 					$value = substr( $value, 7 );
 					$this->m_wikitext = $value;
 				}
-				/// TODO The following is too strict, since emails may contain non-ASCII symbols (by RFC 2047 and RFC 3490)
-				$check = "#^([_a-zA-Z0-9-]+)((\.[_a-zA-Z0-9-]+)*)@([_a-zA-Z0-9-]+(\.[_a-zA-Z0-9-]+)*)\.([a-zA-Z]{2,6})$#u";
-				if ( !preg_match( $check, $value ) ) {
+				
+				$check = method_exists( 'Sanitizer', 'validateEmail' ) ? Sanitizer::validateEmail( $value ) : self::validateEmail( $value );
+				if ( !$check ) {
 					///TODO: introduce error-message for "bad" email
 					$this->addError( wfMsgForContent( 'smw_baduri', $value ) );
 					break;
@@ -254,6 +254,35 @@ class SMWURIValue extends SMWDataValue {
 		}
 		
 		return '';
+	}
+	
+	/**
+	 * This is a copy of 
+	 * @see Sanitizer::validateEmail
+	 * which was introduced in MW 1.18, and is thus used for compatibility with earlier versions.
+	 */
+	public static function validateEmail( $addr ) {
+		$result = null;
+		if( !wfRunHooks( 'isValidEmailAddr', array( $addr, &$result ) ) ) {
+			return $result;
+		}
+
+		// Please note strings below are enclosed in brackets [], this make the
+		// hyphen "-" a range indicator. Hence it is double backslashed below.
+		// See bug 26948
+		$rfc5322_atext   = "a-z0-9!#$%&'*+\\-\/=?^_`{|}~" ;
+		$rfc1034_ldh_str = "a-z0-9\\-" ;
+
+		$HTML5_email_regexp = "/
+		^                      # start of string
+		[$rfc5322_atext\\.]+    # user part which is liberal :p
+		@                      # 'apostrophe'
+		[$rfc1034_ldh_str]+       # First domain part
+		(\\.[$rfc1034_ldh_str]+)*  # Following part prefixed with a dot
+		$                      # End of string
+		/ix" ; // case Insensitive, eXtended
+
+		return (bool) preg_match( $HTML5_email_regexp, $addr );
 	}
 
 }
